<resources>
    <string name="website">http://mukbangv1.000webhostapp.com/</string>
    <string name="app_name">Mukbang</string>
    <string name="facebook_login_text">Login With Facebook</string>
    <string name="continue_with_email">Continue With Email</string>
    <string name="login_with_mukbang_account">Login with MukBang account</string>
    <string name="email_or_username">Email or Username</string>
    <string name="be_foodie_and_do_mukbang">Be Foodie and Mukbang</string>
    <string name="logoimg">LogoImg</string>
    <string name="password">Password</string>
    <string name="login_text">Let\'s Login</string>
    <string name="forget_password">Forget password?</string>
    <string name="new_to_mukbang_signup">New to MukBang? SignUp</string>
    <string name="why_not_login_later">Why not Login Later?</string>
    <string name="close_icon">Close Icon</string>
    <string name="register_val">Register</string>
    <string name="username">UserName</string>
    <string name="register_with_mukbang_account">Register with MukBang Account</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forget_title">Forget Mukbang Password</string>
    <string name="code">Code</string>
    <string name="this_code_is_send_to_your_email_address">*This code is send to your email address</string>
    <string name="check">Check</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change">Change</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="eating">Eating</string>
    <string name="profile">Profile</string>
    <string name="logout">LogOut</string>
    <string name="order">Order</string>
    <string name="eat">Eat</string>
    <string name="online_order">No Online Order</string>
    <string name="login_now">Login Now</string>
    <string name="dummy_name">Dummy Name</string>
    <string name="dummy_name_com">dummy@name.com</string>
    <string name="email">Email</string>
    <string name="d_no_8_d_street_dummy_opposite_dummy_lahore">D No 8-D Street Dummy Opposite Dummy,Lahore</string>
    <string name="address">Address</string>
    <string name="need_something_to_eat_login_now_to_order">Need something to eat Login now to Order</string>
    <string name="need_something_to_eat">Need something to eat</string>
    <string name="login_now_to_order">Login Now to Order</string>
    <string name="full_name">Full Name</string>
    <string name="login_logo">Login Logo</string>
    <string name="night_mode">Night mode</string>
    <string name="send_feeback">Send Feeback</string>
    <string name="icon">Icon</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="setting">Setting</string>
    <string name="edit">Edit</string>
    <string name="more_setting">More Setting</string>
    <string name="add_full_name">Add Full Name</string>
    <string name="done">Done</string>
    <string name="popular_brand">Popular Brand</string>
    <string name="facebook_app_id">598098697330732</string>
    <string name="fb_login_protocol_scheme">fb598098697330732</string>
    <string name="id">ID</string>
    <string name="restaurent_around_you">Restaurent Around You</string>
    <string name="_4_7">4.7</string>
    <string name="location">Location</string>
    <string name="background">background</string>
    <string name="imagelogo">imageLogo</string>
    <string name="rs_315">Rs 315</string>
    <string name="backbutton">backbutton</string>
    <string name="cart">cart</string>
    <string name="_0">0</string>
    <string name="remove">remove</string>
    <string name="add">add</string>
    <string name="no_menu">No Menu</string>
    <string name="checkout">Checkout:</string>
    <string name="total_bill">Total Bill:</string>
    <string name="_1050_pkr">1050 PKR</string>
    <string name="total">Total:</string>
    <string name="delivery_fee">Delivery Fee:</string>
    <string name="_200_pkr">200 PKR</string>
    <string name="empty" />
    <string name="anything_to_say">Anything to say?</string>
    <string name="done_saying">Done Saying?</string>
</resources>
