<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".Profile"
    android:orientation="vertical"
    android:padding="20sp">

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/NotLogin"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:src="@drawable/login"
            android:layout_width="200sp"
            android:layout_height="200sp"
            android:contentDescription="@string/login_logo" />
        <TextView
            android:fontFamily="cursive"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#fff"
            android:text="@string/need_something_to_eat"
            android:layout_width="150sp"
            android:layout_height="wrap_content" />
        <TextView
            android:fontFamily="cursive"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#fff"
            android:text="@string/login_now_to_order"
            android:layout_width="150sp"
            android:layout_height="wrap_content" />
        <Button
            android:layout_marginTop="20sp"
            android:id="@+id/SignIn"
            android:textColor="#fff"
            android:text="@string/login_now"
            android:textStyle="bold"
            android:background="@drawable/main_login"
            android:layout_width="250sp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/OnLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:clickable="true"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/bartender"
                app:civ_border_width="2dp"
                app:civ_border_color="#FFF"
                android:focusable="true" />
        </LinearLayout>
<!--Detail row -->
        <LinearLayout
            android:paddingBottom="20sp"
            android:paddingStart="20sp"
            android:paddingEnd="0sp"
            android:layout_marginTop="40sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textSize="13sp"
                android:textStyle="bold"
                android:textColor="@color/ErrorDialog"
                android:text="@string/full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="10sp"
                android:textSize="15sp"
                android:textColor="@color/PrimaryText"
                android:text="@string/dummy_name"
                android:backgroundTint="@color/Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
<!--SWITCH TOGGLE-->
        <LinearLayout
            android:paddingBottom="20sp"
            android:paddingStart="20sp"
            android:paddingEnd="0sp"
            android:layout_marginTop="40sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/PrimaryText"
                android:text="@string/night_mode"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <Switch
                android:theme="@style/ToggleSwitchTheme"
                android:id="@+id/simpleSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
<!--Clickable view-->
        <LinearLayout
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/linear_list"
            android:paddingTop="20sp"
            android:paddingBottom="20sp"
            android:paddingStart="20sp"
            android:paddingEnd="0sp"
            android:layout_marginTop="40sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center">
            <ImageView
                android:src="@drawable/ic_email_black_24dp"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:contentDescription="@string/icon" />
            </LinearLayout>
                <TextView
                android:layout_marginTop="0sp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/PrimaryText"
                android:text="@string/send_feeback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/SignOut"
            android:textStyle="bold"
            android:textColor="@color/PrimaryText"
            android:text="@string/logout"
            android:layout_marginTop="20sp"
            android:background="@drawable/button"
            android:backgroundTint="@color/Card"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>


</LinearLayout>