<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="10sp">
        <ImageView
            android:src="@drawable/money_silver"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:contentDescription="@string/order" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="10sp">
        <ImageView
            android:src="@drawable/pizza_silver"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:contentDescription="@string/eat" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="10sp">
        <ImageView
            android:background="@color/Transparent"
            android:src="@drawable/face"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:contentDescription="@string/profile" />
    </LinearLayout>
    </LinearLayout>