<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    tools:context=".Counter"
    android:background="@color/Background"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingTop="10sp"
    android:paddingBottom="50sp"
    android:paddingEnd="10sp"
    android:paddingStart="20sp"
    >
    <ImageView
        android:id="@+id/close_btn"
        android:focusable="true"
        android:clickable="true"
        android:layout_gravity="end"
        android:background="@drawable/tab"
        android:src="@drawable/ic_close_red_24dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/close_icon" />
    <TextView
        android:gravity="center"
        android:paddingEnd="10sp"
        android:paddingStart="0sp"
        android:layout_marginStart="10sp"
        android:id="@+id/title"
        android:textStyle="bold"
        android:textColor="@color/PrimaryText"
        android:textSize="20sp"
        android:text="@string/dummy_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/AddBtn"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/tab"
            android:backgroundTint="@color/Card"
            android:layout_gravity="center"
            android:src="@drawable/ic_add_black_24dp"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:contentDescription="@string/add" />
        <LinearLayout
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:background="@color/PrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/Quantity"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/Background"
            android:text="@string/_0"
            android:backgroundTint="@color/Transparent"
            android:layout_width="50sp"
            android:layout_height="50sp" />
        </LinearLayout>
    <ImageView
        android:id="@+id/RemoveBtn"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/tab"
        android:backgroundTint="@color/ErrorDialog"
        android:layout_gravity="center"
        android:src="@drawable/ic_remove_black_24dp"
        android:layout_width="50sp"
        android:layout_height="match_parent"
        android:contentDescription="@string/remove" />
    </LinearLayout>
    <TextView
        android:id="@+id/PriceShow"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30sp"
        android:gravity="center"
        android:textColor="@color/PrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>