<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_marginTop="15sp"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="150sp"
    android:background="@drawable/tab"
    android:orientation="horizontal"
    android:padding="15dp"
    android:baselineAligned="false">
    <FrameLayout
        android:layout_weight="1.7"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/List_Logo"
            android:scaleType="fitXY"
            android:src="@drawable/subway_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/logoimg" />
        <TextView
            android:id="@+id/ListRating"
            android:layout_gravity="end"
            android:background="@drawable/list_rating"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10sp"
            android:text="@string/_4_7"
            android:textColor="@color/PrimaryText"
            android:textSize="13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>
    <LinearLayout
        android:layout_marginStart="25sp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/ListName"
            android:textStyle="bold"
            android:gravity="start"
            android:text="@string/dummy_name"
            android:textColor="@color/Card"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/ListLocation"
            android:gravity="start"
            android:layout_marginTop="20sp"
            android:textStyle="bold"
            android:text="@string/location"
            android:textColor="@color/PrimaryText"
            android:textSize="13sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/ListTime"
            android:layout_marginTop="20sp"
            android:textStyle="bold"
            android:gravity="start"
            android:text="@string/dummy_name"
            android:textColor="@color/Yellow"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>