<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginWithEmail"
    android:orientation="vertical"
    android:padding="20sp"
    android:background="@color/Background"
    >
    <TextView
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_with_mukbang_account"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_marginTop="50sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/UserEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:focusableInTouchMode="true"
        android:hint="@string/email_or_username"
        android:textColorHint="@color/Card"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
        <EditText
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/Card"
            android:textSize="25sp"
            android:textColor="@color/PrimaryText"
            android:textColorHint="@color/Card"
            android:textStyle="bold"
            android:id="@+id/UName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:paddingStart="20sp"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/PassLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:focusableInTouchMode="true"
        android:hint="@string/password"
        android:textColorHint="@color/Card"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
        <EditText
            android:inputType="textPassword"
            android:paddingStart="20sp"
            android:backgroundTint="@color/Card"
            android:textSize="25sp"
            android:textColor="@color/PrimaryText"
            android:textColorHint="@color/Card"
            android:textStyle="bold"
            android:id="@+id/PName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:background="@drawable/login_button"
        android:layout_marginTop="50sp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/Card"
        android:textSize="20sp"
        android:text="@string/login_text"/>
    </LinearLayout>
</LinearLayout>